<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    android:background="#f04a3a"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_register"
        android:id="@+id/fragment_register_container"
        android:name="com.example.guri.eatnexplorerestaurantfinder.RegisterFragment">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_login"
        android:id="@+id/fragment_login_container"
        android:name="com.example.guri.eatnexplorerestaurantfinder.LoginFragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/mapLayout"
        android:layout_height="300dp">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeScreenMainActivity" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/resturant_detail_container"
        android:name="com.example.guri.eatnexplorerestaurantfinder.ResturantDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_resturant_detail"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_two"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/searchTagLayoutBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/searchTag"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default"
            app:boxStrokeColor="@color/common_google_signin_btn_text_dark_default"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/searchBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="8"
                android:textColor="#ffffff"
                android:inputType="text"
                android:queryHint="@string/searchHint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/searchLocLayoutBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enterSearchLoc"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default">

            <EditText
                android:id="@+id/searchLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="#ffffff"
                android:ems="8"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_search"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="#ECECEC"
            android:padding="16dp"
            android:textColor="#f04a3a"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="Search Restaurants" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_four"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="#ECECEC"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="25dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="#f04a3a"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ECECEC"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="25dp"
            android:paddingBottom="10dp"
            android:text="@string/register"
            android:layout_marginLeft="15dp"
            android:textColor="#f04a3a"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layouttemp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTempShowFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="#ECECEC"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="25dp"
            android:paddingBottom="10dp"
            android:text="@string/tempBtn"
            android:textColor="#f04a3a"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>